<resources>
    <string name="app_name">NetworkingPal</string>

    <!--
        Strings for Drawer
        -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome</string>
    <string name="calendar">Calendar</string>
    <string name="applications">Applications</string>
    <string name="contacts">Contacts</string>
    <string name="diggernet">Diggernet</string>

    <!--
Strings for welcome activity
-->
    <string name="recent_activity">Recent Activity</string>
    <string name="application_recent">Application</string>
    <string name="date">Date</string>

    <string name="new_contact">Contact</string>
    <string name="new_application">App</string>
    <string name="new_event">Event</string>
    <string name="new_company">Company</string>
    <!--
Strings for ApplicationSearchActivity
-->

    <string name="navigation_menu">Navigation Menu</string>
    <string name="applications_header">Applications</string>
    <string name="search_hint">What do U wanna find</string>

    <string-array name="sort_choice_array">
        <item>A</item>
        <item>Z</item>
        <item>Date Submitted</item>
        <item>Date Due</item>
    </string-array>

    <!--
    Strings for new Application layout
-->
    <string name ="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="company_contact">Company Contact</string>
    <string name="date_due">Date Due</string>
    <string name="cover_letter">Cover letter</string>
    <string name="resume">Resume</string>
    <string name="submitted">Submitted"</string>
    <string name="create_new">Create New</string>
    <string name="choose_existing">Choose Existing</string>
    <string name="date_picker_title">Date Due:</string>
    <string name="company_picker_title">Company:</string>
    <string name="contact_picker_title">Contact:</string>

    <!--
    Strings for new contact layout
-->
    <string name = "contact_name">Contact Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title">Title</string>
    <string name="business_card">Business Card</string>
    <string name="done">Done</string>

    <!--
    Strings for NewEvent Layout
    -->
    <string name="new_event_activity">Event</string>
    <string name="event_title">Event Name: </string>
    <string name="date_text">Date: </string>
    <string name="time_text">Time: </string>
    <string name="details_text">Details: </string>
    <string name="create_text">Okay</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_date">Enter Date</string>
    <string name="empty_text"></string>
    <string name="delete_text">Delete</string>

    <!--
    Strings for Calendar Layout
    -->
    <string name="calendar_activity">Calendar</string>
    <string name="new_event_button">Event</string>
    <string name="events_on_text">Events on: </string>

    <!--
    Strings for Diggerenet-->
    <string name="username">Username(CWID)</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name = "diggernet_activity">Diggernet</string>

    <!--
    Strings for new Company Layout
    -->
    <string name="address">Address</string>

    <!--
    Strings for notifications Layout
    -->
    <string name="start_notifications">Turn on notifications</string>
    <string name="stop_notifications">Turn off notifications</string>
    <string name="default_notification">Upcoming Event:</string>
    <string name="default_details">You have an upcoming event! Better start preparing.</string>
    <string name="app_notification">Application Due:</string>
    <string name="app_details">You have an application due! Make sure you submit it.</string>
</resources>
