<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/company_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/company_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/job_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_title"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/job_title"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/company_contact_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_contact"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/button_linear_layout"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/choose_existing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_existing"/>

        <Button
            android:id="@+id/create_new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_new"/>
    </LinearLayout>

    <TextView
        android:id="@+id/date_due_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_due"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/date_due"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cover_letter_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover_letter"/>

        <CheckBox
            android:id="@+id/resume_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"/>

        <CheckBox
            android:id="@+id/submitted_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitted"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id ="@+id/done_company_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/done"/>

    </RelativeLayout>



</LinearLayout>