<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/contact_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/company_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/button_linear_layout_company2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/choose_existing_company_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_existing"/>

        <Button
            android:id="@+id/create_new_company_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_new"/>
    </LinearLayout>

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/phone_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/business_card_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_card"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <include layout = "@layout/view_and_camera_title"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id ="@+id/back_company_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="Back"/>

            <Button
                android:id ="@+id/done_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/done"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>