<?xml version="1.0" encoding="utf-8"?>
<!--
hamburger menu created heavily using:
http://blog.teamtreehouse.com/add-navigation-drawer-android
-->
<android.support.v4.widget.DrawerLayout
    android:id="@+id/welcome_drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--always seen layout-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
        >

            <Button
                android:id="@+id/new_event_button"
                android:layout_width="wrap_content"
                android:layout_height="55sp"
                android:text="@string/new_event"
                android:layout_toRightOf="@+id/new_contact_button"
            />
            <Button
                android:id="@+id/new_contact_button"
                android:layout_width="100sp"
                android:layout_height="55sp"
                android:text="@string/new_contact"
                android:layout_toRightOf="@+id/new_app_button"
            />
            <Button
                android:id="@+id/new_company_button"
                android:layout_width="105sp"
                android:layout_height="55sp"
                android:text="@string/new_company"
                android:layout_toRightOf="@+id/new_event_button"
            />
            <Button
                android:id="@+id/new_app_button"
                android:layout_width="90sp"
                android:layout_height="55sp"
                android:text="@string/new_application"
            />
        </RelativeLayout>
        <TextView
            android:id="@+id/recent_activity_text_view"
            android:layout_below="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_activity"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp"
        />

        <FrameLayout
            android:layout_below="@+id/recent_activity_text_view"
            android:id="@+id/fragment_welcome_list_host"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
        </FrameLayout>

    </RelativeLayout>

    <!-- portion for the hamburger menu_main-->
    <ListView
        android:id="@+id/welcome_navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>
</android.support.v4.widget.DrawerLayout>