<?xml version = "1.0" encoding = "utf-8"?>
<!--
adapted from
https://www.tutorialspoint.com/android/android_login_screen.htm
-->
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = ".DiggernetActivity"
>

    <TextView
        android:id = "@+id/login_text_view"
        android:text = "@string/diggernet"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "35dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true"
        android:textColor="@android:color/black"
    />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_below="@+id/login_text_view"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mines_logo"
        android:layout_marginTop = "20dp"
    />


    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/enter_username_edit_text"
        android:hint = "@string/username"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:layout_marginTop = "20dp"
        android:layout_below = "@+id/imageView"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/enter_pw_edit_text"
        android:layout_below="@+id/enter_username_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/enter_username_edit_text"
        android:layout_alignEnd="@+id/enter_username_edit_text"
        android:hint="@string/password"
    />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_pw_edit_text"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
        />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toRightOf="@id/login_button"
        />
    </RelativeLayout>


</RelativeLayout>